Updated the docs. TODO: Add filter and sort feature.
