# docs/swagger.json
@@ -57,6 +57,15 @@
                         "schema": {
                             "$ref": "#/definitions/route.changePasswordCredential"
                         }
+                    },
+                    {
+                        "description": "User's session",
+                        "name": "sessionString",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
                     }
                 ],
                 "responses": {
@@ -92,7 +101,7 @@
                 "parameters": [
                     {
                         "description": "User credentials",
-                        "name": "credential",
+                        "name": "userCredential",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -128,6 +137,110 @@
                     "accounts"
                 ],
                 "summary": "Get user's followed novels",
+                "parameters": [
+                    {
+                        "description": "User's Session",
+                        "name": "sessionString",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
+                    },
+                    {
+                        "type": "boolean",
+                        "name": "adult",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "fromDate",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "language",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "created_at",
+                            "updated_at",
+                            "views",
+                            "title"
+                        ],
+                        "type": "string",
+                        "x-enum-varnames": [
+                            "OrderByCreatedAt",
+                            "OrderByUpdateAt",
+                            "OrderByViews",
+                            "OrderByTitle"
+                        ],
+                        "name": "orderBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "ASC",
+                            "DESC"
+                        ],
+                        "type": "string",
+                        "x-enum-varnames": [
+                            "SortOrderAsc",
+                            "SortOrderDesc"
+                        ],
+                        "name": "sortOrder",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            1,
+                            2,
+                            3
+                        ],
+                        "type": "integer",
+                        "x-enum-varnames": [
+                            "StatusOngoing",
+                            "StatusCompleted",
+                            "StatusDropped"
+                        ],
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "name": "tag",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "name": "tagExclude",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "toDate",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -159,6 +272,17 @@
                     "accounts"
                 ],
                 "summary": "Get user's followed users",
+                "parameters": [
+                    {
+                        "description": "User's Session",
+                        "name": "sessionString",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -194,7 +318,7 @@
                 "parameters": [
                     {
                         "description": "User credentials",
-                        "name": "credential",
+                        "name": "userCredential",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -233,7 +357,7 @@
                 "parameters": [
                     {
                         "description": "User credentials",
-                        "name": "credential",
+                        "name": "sessionString",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -267,7 +391,7 @@
                 "parameters": [
                     {
                         "description": "User credentials",
-                        "name": "credential",
+                        "name": "userCredential",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -309,7 +433,7 @@
                 "parameters": [
                     {
                         "description": "User credentials",
-                        "name": "credential",
+                        "name": "sessionString",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -348,6 +472,17 @@
                     "accounts"
                 ],
                 "summary": "Get user's metadata from session",
+                "parameters": [
+                    {
+                        "description": "User's Session",
+                        "name": "sessionString",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -376,8 +511,17 @@
                 "summary": "Update user's metadata",
                 "parameters": [
                     {
+                        "description": "User credentials",
+                        "name": "sessionString",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
+                    },
+                    {
                         "description": "User metadata",
-                        "name": "credential",
+                        "name": "metadata",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -421,6 +565,14 @@
                         "name": "NovelID",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "User's Session",
+                        "name": "sessionString",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
                     }
                 ],
                 "responses": {
@@ -493,6 +645,15 @@
                         "schema": {
                             "$ref": "#/definitions/model.NovelMetadata"
                         }
+                    },
+                    {
+                        "description": "User's Session",
+                        "name": "sessionString",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
                     }
                 ],
                 "responses": {
@@ -539,6 +700,15 @@
                         "schema": {
                             "$ref": "#/definitions/model.NovelMetadata"
                         }
+                    },
+                    {
+                        "description": "User's Session",
+                        "name": "sessionString",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
                     }
                 ],
                 "responses": {
@@ -580,6 +750,108 @@
                         "name": "UserID",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "User's Session",
+                        "name": "sessionString",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncludeSessionString"
+                        }
+                    },
+                    {
+                        "type": "boolean",
+                        "name": "adult",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "fromDate",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "language",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "created_at",
+                            "updated_at",
+                            "views",
+                            "title"
+                        ],
+                        "type": "string",
+                        "x-enum-varnames": [
+                            "OrderByCreatedAt",
+                            "OrderByUpdateAt",
+                            "OrderByViews",
+                            "OrderByTitle"
+                        ],
+                        "name": "orderBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "ASC",
+                            "DESC"
+                        ],
+                        "type": "string",
+                        "x-enum-varnames": [
+                            "SortOrderAsc",
+                            "SortOrderDesc"
+                        ],
+                        "name": "sortOrder",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            1,
+                            2,
+                            3
+                        ],
+                        "type": "integer",
+                        "x-enum-varnames": [
+                            "StatusOngoing",
+                            "StatusCompleted",
+                            "StatusDropped"
+                        ],
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "name": "tag",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "name": "tagExclude",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "toDate",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -762,6 +1034,21 @@
                 }
             }
         },
+        "model.OrderBy": {
+            "type": "string",
+            "enum": [
+                "created_at",
+                "updated_at",
+                "views",
+                "title"
+            ],
+            "x-enum-varnames": [
+                "OrderByCreatedAt",
+                "OrderByUpdateAt",
+                "OrderByViews",
+                "OrderByTitle"
+            ]
+        },
         "model.SessionInfo": {
             "type": "object",
             "properties": {
@@ -772,6 +1059,17 @@
                     "type": "string"
                 }
             }
+        },
+        "model.SortOrder": {
+            "type": "string",
+            "enum": [
+                "ASC",
+                "DESC"
+            ],
+            "x-enum-varnames": [
+                "SortOrderAsc",
+                "SortOrderDesc"
+            ]
         },
         "model.TagView": {
             "type": "object",
